<resources>
    <string name="app_name">MounteR</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_directions">Ride details</string>
    <string name="chooseTypeOfListing">Choose Type of ride posting</string>
    <string name="createListing">Create ride posting</string>
    <string name="title_activity_login">MounteR Login</string>
    <string name="title_activity_pending_ride_requests">Pending ride requests</string>
    <string name="title_activity_ride_search">Available rides</string>
    <string name="user_profile">User Profile</string>
    <string name="action_settings">Settings</string>
    <string name="driver_label_text">Driver:</string>
    <string name="ride_details_label_text">Ride details:</string>
    <string name="is_in_good_standing">Is in good standing</string>
    <string name="no_driver">No driver yet</string>
    <string name="rating">rating</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="sex">sex</string>
    <string name="request_to_join">request to join</string>
    <string name="success">Success</string>
    <string name="origin_location">Origin location</string>
    <string name="destination_location">Destination location</string>
    <string name="address_not_recognized">Address not recognized. Please, try again</string>
    <string name="fill_in_components">Please make sure to fill in all key components</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="hour_of_departure">Hour of Departure</string>
    <string name="description">Description</string>
    <string name="submit">submit</string>
    <string name="select_date">Select Date</string>
    <string name="default_notification_channel_id">MounteR</string>
    <string name="new_ride_request">New ride request!</string>
    <string name="fcm_token_fmt">FCM registration Token: %s</string>
    <string name="new_ride_requests_channel_name">new ride requests</string>
    <string name="accept_ride_request_btn_text">accept</string>
    <string name="decline_ride_request_btn_text">decline</string>
    <string name="username">username</string>
    <string name="request_to_drive">request to drive</string>
    <string name="search">Search:</string>
    <string name="destination_address">destination address</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="searchRide">Search Ride</string>
    <string name="logout">Log Out</string>
    <string name="user_profile_edit_btn_text">Edit</string>
    <string name="view_user_profile_btn_text">View profile</string>
    <string name="name_label_user_profile">Name:</string>
    <string name="rating_label_user_profile">Rating:</string>
    <string name="sex_label_user_profile">Sex:</string>
    <string name="designed_by_team_4">Designed by team 4</string>
</resources>